--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.5",
+    "lucide": "^0.292.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-transition-group": "^4.4.5",
     "tailwind-merge": "^2.0.0",
     "tailwind-scrollbar": "^3.0.5"
   },
@@ -20,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.9",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
