--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.3.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "lucide": "^0.292.0",
